--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,9 @@
 GOOGLE_APPLICATION_CREDENTIALS="/Users/lincolnnguyen/secrets/client_secret_493124278798-sremdepaq957svqqllaoiidlq8qp57ok.apps.googleusercontent.com.json"
 GOOGLE_CLIENT_ID="493124278798-sremdepaq957svqqllaoiidlq8qp57ok.apps.googleusercontent.com"
+SHARED_TABLE_NAME="lincolnnguyen.me"
+AWS_ACCESS_KEY_ID="AKIAX4X6VWC3FTYWGOHV"
+AWS_SECRET_ACCESS_KEY="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"
+AWS_REGION="us-east-1"
+PORT=3001
+CLIENT_ORIGIN=http://localhost:3000
+JWT_SECRET="lincolnnguyen"
