--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "google-auth-library": "^8.7.0"
+    "dynamoose": "^3.1.0",
+    "eslint": "^8.30.0",
+    "eslint-config-standard": "^17.0.0",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "google-auth-library": "^8.7.0",
+    "graphql": "^15.8.0",
+    "graphql-request": "^5.1.0",
+    "jest": "^29.3.1",
+    "jsonwebtoken": "^9.0.0",
+    "socket.io": "^4.5.4"
   },
   "type": "module"
 }
