--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -27,6 +27,7 @@
         "comma-dangle": ["error", "always-multiline"],
         "indent": ["error", 2],
         "no-unused-vars": [ "error", { "vars": "all", "args": "all", "ignoreRestSiblings": false, "varsIgnorePattern": "^_" } ],
+//        "no-unused-vars": "off",
         "space-before-function-paren": ["error", "always"],
         "space-before-blocks": ["error", "always"],
         "react/prop-types": "off"
