--- a/backend/package.json
+++ b/backend/package.json
@@ -11,18 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
+    "@apollo/server": "^4.3.0",
+    "@faker-js/faker": "^7.6.0",
     "dotenv": "^16.0.3",
     "dynamoose": "^3.1.0",
     "eslint": "^8.30.0",
     "eslint-config-standard": "^17.0.0",
-    "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
     "google-auth-library": "^8.7.0",
-    "graphql": "^15.8.0",
+    "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "jest": "^29.3.1",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "socket.io": "^4.5.4"
   },
   "type": "module"
