--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.3.0",
+    "@aws-sdk/client-dynamodb": "^3.241.0",
+    "@aws-sdk/lib-dynamodb": "^3.241.0",
     "@faker-js/faker": "^7.6.0",
     "dotenv": "^16.0.3",
     "dynamoose": "^3.1.0",
