--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -24,12 +24,14 @@
     "rules": {
         "semi": ["error", "always"],
         "quotes": ["error", "single"],
+//        "quotes": "off",
         "comma-dangle": ["error", "always-multiline"],
         "indent": ["error", 2],
-//        "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-        "no-unused-vars": "off",
+        "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+//        "no-unused-vars": "off",
         "space-before-function-paren": ["error", "always"],
         "space-before-blocks": ["error", "always"],
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "spaced-comment": "off"
     }
 }
