--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -32,6 +32,7 @@
         "space-before-function-paren": ["error", "always"],
         "space-before-blocks": ["error", "always"],
         "react/prop-types": "off",
-        "spaced-comment": "off"
+        "spaced-comment": "off",
+        "no-new": "off"
     }
 }
