--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "graphql-request": "^5.1.0",
     "js-cookie": "^3.0.1",
     "konva": "^8.3.14",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.3",
