--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/dom-speech-recognition": "^0.0.1",
     "graphql-request": "^5.1.0",
     "js-cookie": "^3.0.1",
     "konva": "^8.3.14",
