--- a/aws-cdk/package.json
+++ b/aws-cdk/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.58.1",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "eslint": "^8.30.0",
+    "eslint-config-standard": "^17.0.0"
   },
   "type": "module"
 }
