--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
