Add wallpaper, restyle side menu

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -25,10 +25,10 @@
         "semi": ["error", "always"],
         "comma-dangle": ["error", "always-multiline"],
         "indent": ["error", 2],
-        "quotes": ["error", "single"],
-        "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-//        "quotes": "off",
-//        "no-unused-vars": "off",
+//        "quotes": ["error", "single"],
+//        "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+        "quotes": "off",
+        "no-unused-vars": "off",
         "space-before-function-paren": ["error", "always"],
         "space-before-blocks": ["error", "always"],
         "react/prop-types": "off",
