--- a/frontend3/package.json
+++ b/frontend3/package.json
@@ -1,19 +1,25 @@
 {
   "dependencies": {
-    "autoprefixer": "^10.4.13",
-    "eslint-plugin-react": "^7.32.2",
-    "postcss": "^8.4.21",
+    "@reduxjs/toolkit": "^1.9.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "tailwind-merge": "^1.9.1",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.33.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
     "parcel": "^2.8.3",
+    "parcel-reporter-static-files-copy": "^1.5.0",
+    "postcss": "^8.4.21",
     "process": "^0.11.10"
   },
   "scripts": {
