--- a/frontend3/package.json
+++ b/frontend3/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "detect-browser": "^5.3.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
