--- a/frontend3/package.json
+++ b/frontend3/package.json
@@ -8,7 +8,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "tailwind-merge": "^1.9.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
