--- a/frontend3/package.json
+++ b/frontend3/package.json
@@ -9,7 +9,8 @@
     "react-router-dom": "^6.8.1",
     "tailwind-merge": "^1.9.1",
     "tailwindcss": "^3.2.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "wakachigaki": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
