--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "detect-browser": "^5.3.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "5.0.1",
+    "tailwind-merge": "^1.10.0",
+    "uuid": "^9.0.0",
+    "wakachigaki": "^1.3.2"
   },
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
@@ -17,19 +25,45 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"],
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
     "rules": {
-      "semi": ["error", "always"],
-      "comma-dangle": ["error", "always-multiline"],
-      "indent": ["error", 2],
-      "space-before-function-paren": ["error", "always"],
-      "space-before-blocks": ["error", "always"],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "comma-dangle": [
+        "error",
+        "always-multiline"
+      ],
+      "indent": [
+        "error",
+        2
+      ],
+      "space-before-function-paren": [
+        "error",
+        "always"
+      ],
+      "space-before-blocks": [
+        "error",
+        "always"
+      ],
       "react/prop-types": "off",
       "spaced-comment": "off",
       "no-new": "off",
       "eol-last": "error",
-      "quotes": ["error", "single"],
-      "no-unused-vars": ["error", {"argsIgnorePattern": "^_"}]
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "no-unused-vars": [
+        "error",
+        {
+          "argsIgnorePattern": "^_"
+        }
+      ]
     }
   },
   "browserslist": {
