--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -63,7 +63,8 @@
         {
           "argsIgnorePattern": "^_"
         }
-      ]
+      ],
+      "react-hooks/exhaustive-deps": "off"
     }
   },
   "browserslist": {
