--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -15,8 +15,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^1.10.0",
-    "uuid": "^9.0.0",
-    "wakachigaki": "^1.3.2"
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
