--- a/backend2/package.json
+++ b/backend2/package.json
@@ -2,17 +2,22 @@
   "name": "backend2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "NODE_ENV=dev nodemon index.js",
-    "startProd": "NODE_ENV=prod nodemon index.js"
+    "start": "NODE_ENV=dev nodemon src/index.js",
+    "startProd": "NODE_ENV=prod nodemon src/index.js",
+    "test": "NODE_ENV=dev node --experimental-vm-modules ./node_modules/.bin/jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.4.0",
-    "dotenv": "^16.0.3"
+    "@aws-sdk/client-dynamodb": "^3.279.0",
+    "@aws-sdk/lib-dynamodb": "^3.279.0",
+    "dotenv": "^16.0.3",
+    "jest": "^29.4.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.34.0",
