--- a/aws-cdk/package.json
+++ b/aws-cdk/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "aws-cdk",
+  "name": "lincolnnguyen-cdk",
   "version": "0.1.0",
   "bin": {
-    "aws-cdk": "bin/aws-cdk.js"
+    "lincolnnguyen-cdk": "bin/lincolnnguyen-cdk.js"
   },
   "scripts": {
     "build": "echo \"The build step is not required when using JavaScript!\" && exit 0",
@@ -10,14 +10,17 @@
     "test": "jest"
   },
   "devDependencies": {
-    "aws-cdk": "2.58.1",
-    "jest": "^29.3.1"
+    "aws-cdk": "2.66.1",
+    "eslint": "^8.35.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.4.2"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.58.1",
-    "constructs": "^10.0.0",
-    "eslint": "^8.30.0",
-    "eslint-config-standard": "^17.0.0"
+    "aws-cdk-lib": "2.66.1",
+    "constructs": "^10.0.0"
   },
   "type": "module"
 }
