--- a/backend2/.env.example
+++ b/backend2/.env.example
@@ -1,4 +1,6 @@
-AWS_ACCESS_KEY_ID=""
-AWS_SECRET_ACCESS_KEY=""
+AWS_ACCESS_KEY_ID="string"
+AWS_SECRET_ACCESS_KEY="string"
 AWS_REGION="us-east-1"
 PORT=3001
+DDB_MAIN_TABLE="string"
+DATABASE_URL="postgresql://username:password@url:5432/dbname"
