--- a/backend2/package.json
+++ b/backend2/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "NODE_ENV=dev nodemon src/index.js",
+    "start": "NODE_ENV=test nodemon src/index.js",
     "startProd": "NODE_ENV=prod nodemon src/index.js",
-    "test": "NODE_ENV=dev node --experimental-vm-modules ./node_modules/.bin/jest"
+    "test": "NODE_ENV=test node --experimental-vm-modules ./node_modules/.bin/jest",
+    "prismaCreate": "dotenv -e .env.test -- npx prisma migrate dev --create-only",
+    "prismaMigrate": "dotenv -e .env.test -- npx prisma migrate dev && npm run copyPrismaClient",
+    "copyPrismaClient": "cp ./prisma/schema.prisma ../aws-cdk/src/schema.prisma && (cd ../aws-cdk/src && prisma generate)"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +18,7 @@
     "@apollo/server": "^4.4.0",
     "@aws-sdk/client-dynamodb": "^3.279.0",
     "@aws-sdk/lib-dynamodb": "^3.279.0",
+    "@prisma/client": "^4.10.1",
     "dotenv": "^16.0.3",
     "jest": "^29.4.3",
     "uuid": "^9.0.0"
@@ -24,7 +28,8 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "prisma": "^4.10.1"
   },
   "type": "module"
 }
