--- a/aws-cdk/package.json
+++ b/aws-cdk/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.66.1",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "dotenv": "^16.0.3"
   },
   "type": "module"
 }
