--- a/backend2/package.json
+++ b/backend2/package.json
@@ -18,9 +18,11 @@
     "@apollo/server": "^4.4.0",
     "@aws-sdk/client-dynamodb": "^3.279.0",
     "@aws-sdk/lib-dynamodb": "^3.279.0",
-    "@prisma/client": "^4.10.1",
+    "@prisma/client": "^4.11.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "jest": "^29.4.3",
+    "joi": "^17.8.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -29,7 +31,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "prisma": "^4.10.1"
+    "prisma": "^4.11.0"
   },
   "type": "module"
 }
