--- a/backend2/.env.example
+++ b/backend2/.env.example
@@ -4,3 +4,6 @@ AWS_REGION="us-east-1"
 PORT=3001
 DDB_MAIN_TABLE="string"
 DATABASE_URL="postgresql://username:password@url:5432/dbname"
+GRAPHQL_URL="http://localhost:3001/graphql"
+GRAPHQL_AUTHORIZATION="Bearer token"
+JWT_SECRET="string"
