--- a/backend2/package.json
+++ b/backend2/package.json
@@ -22,8 +22,10 @@
     "@prisma/client": "^4.11.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "graphql-request": "^5.2.0",
     "jest": "^29.4.3",
     "joi": "^17.8.3",
+    "jsonwebtoken": "^9.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
