Clean up old directories, add figma design

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,9 @@
-GOOGLE_APPLICATION_CREDENTIALS="/Users/lincolnnguyen/secrets/client_secret_493124278798-sremdepaq957svqqllaoiidlq8qp57ok.apps.googleusercontent.com.json"
-GOOGLE_CLIENT_ID="493124278798-sremdepaq957svqqllaoiidlq8qp57ok.apps.googleusercontent.com"
-SHARED_TABLE_NAME="lincolnnguyen.me-dev"
-AWS_ACCESS_KEY_ID=""
-AWS_SECRET_ACCESS_KEY=""
+AWS_ACCESS_KEY_ID="string"
+AWS_SECRET_ACCESS_KEY="string"
 AWS_REGION="us-east-1"
 PORT=3001
-CLIENT_ORIGIN="*"
-JWT_SECRET="lincolnnguyen"
+DDB_MAIN_TABLE="string"
+DATABASE_URL="postgresql://username:password@url:5432/dbname"
+GRAPHQL_URL="http://localhost:3001/graphql"
+GRAPHQL_AUTHORIZATION="Bearer token"
+JWT_SECRET="string"
