Task definition api deployment script

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && aws s3 sync build s3://lincolnnguyen-frontend && aws cloudfront create-invalidation --distribution-id E32IRRBSQ2H3ZB  --paths '/*'"
+    "deploy": "source .env.production && npm run build && aws s3 sync build s3://$AWS_S3_BUCKET_NAME && aws cloudfront create-invalidation --distribution-id $AWS_CLOUDFRONT_DISTRIBUTION_ID  --paths '/*'"
   },
   "eslintConfig": {
     "extends": [
