--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,9 @@ DATABASE_URL="postgresql://username:password@url:5432/dbname"
 GRAPHQL_URL="http://localhost:3001/graphql"
 GRAPHQL_AUTHORIZATION="Bearer token"
 JWT_SECRET="string"
+VERSION="string"
+
+IMAGE_NAME="string"
+CLUSTER_NAME="string"
+SERVICE_NAME="string"
+TASK_DEFINITION_ARN="string"
