--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "prismaCreate": "dotenv -e .env.test -- npx prisma migrate dev --create-only",
     "prismaMigrate": "dotenv -e .env.test -- npx prisma migrate dev && npm run copyPrismaClient",
     "copyPrismaClient": "cp ./prisma/schema.prisma ../aws-cdk/lambda/schema.prisma && (cd ../aws-cdk/lambda && prisma generate)",
-    "deploy": "docker build -t lincolnnguyen-backend:latest . && docker tag lincolnnguyen-backend:latest 542773719222.dkr.ecr.us-east-1.amazonaws.com/lincolnnguyen-backend:latest && aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 542773719222.dkr.ecr.us-east-1.amazonaws.com && docker push 542773719222.dkr.ecr.us-east-1.amazonaws.com/lincolnnguyen-backend:latest && docker images | grep lincolnnguyen | awk '{print $1\":\"$2}' | xargs docker rmi"
+    "deploy": "source .env.prod && docker build -t $IMAGE_NAME:latest . && docker tag $IMAGE_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_NAME:latest && aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com && docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_NAME:latest && docker images | grep $IMAGE_NAME | awk '{print $1\":\"$2}' | xargs docker rmi && aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --force-new-deployment --task-definition $TASK_DEFINITION_ARN | cat"
   },
   "keywords": [],
   "author": "",
