--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,10 @@
   "dependencies": {
     "@apollo/server": "^4.4.0",
     "@aws-sdk/client-dynamodb": "^3.279.0",
+    "@aws-sdk/client-s3": "^3.282.0",
+    "@aws-sdk/cloudfront-signer": "^3.272.0",
     "@aws-sdk/lib-dynamodb": "^3.279.0",
+    "@aws-sdk/s3-request-presigner": "^3.282.0",
     "@aws-sdk/util-dynamodb": "^3.281.0",
     "@prisma/client": "^4.11.0",
     "bcrypt": "^5.1.0",
