--- a/aws-cdk/lambda/package.json
+++ b/aws-cdk/lambda/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.289.0",
     "@aws-sdk/util-dynamodb": "^3.279.0",
-    "@prisma/client": "^4.10.1"
+    "@prisma/client": "^4.10.1",
+    "dotenv": "^16.0.3"
   }
 }
