Replace mpeg with aac for more accurate audio seeking

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,7 @@ FROM --platform=linux/amd64 node:16-alpine
 WORKDIR /usr/src/app
 
 COPY package*.json ./
+RUN apk add --no-cache ffmpeg
 RUN npm install --global nodemon
 RUN npm install
 COPY . .
