Finish notifications demo

--- a/react-sandbox/package.json
+++ b/react-sandbox/package.json
@@ -63,7 +63,8 @@
         }
       ],
       "react-hooks/exhaustive-deps": "off",
-      "prefer-const": "error"
+      "prefer-const": "error",
+      "no-restricted-globals": "off"
     },
     "ignorePatterns": [
       "node_modules",
