--- a/timetable-parser/package.json
+++ b/timetable-parser/package.json
@@ -12,6 +12,7 @@
     "webdriverio": "^8.6.3"
   },
   "devDependencies": {
+    "@types/node": "^18.15.3",
     "@types/web": "^0.0.99",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
