--- a/timetable-parser/tsconfig.json
+++ b/timetable-parser/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
+    "sourceMap": true,
     "baseUrl": "src",
     "types": [
       "node",
