--- a/timetable-parser/.eslintrc
+++ b/timetable-parser/.eslintrc
@@ -44,7 +44,8 @@
       "error",
       "single"
     ],
-    "no-unused-vars": [
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
       "error",
       {
         "argsIgnorePattern": "^_"
