--- a/timetable-parser/package.json
+++ b/timetable-parser/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_PATH=./src ts-node src/index.ts"
+    "start": "NODE_PATH=./src ts-node src/index.ts",
+    "test": "node --experimental-vm-modules ./node_modules/.bin/jest"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +13,14 @@
     "webdriverio": "^8.6.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.3",
     "@types/web": "^0.0.99",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.36.0"
+    "eslint": "^8.36.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5"
   },
   "description": ""
 }
