--- a/timetable-parser/tsconfig.json
+++ b/timetable-parser/tsconfig.json
@@ -2,10 +2,12 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "sourceMap": true,
+    "resolveJsonModule": true,
     "baseUrl": "src",
     "types": [
       "node",
-      "web"
+      "web",
+      "jest"
     ],
   },
   "include": [
