--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "detect-browser": "^5.3.0",
     "graphql-request": "^5.2.0",
     "js-cookie": "^3.0.1",
@@ -88,6 +85,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/lodash": "^4.14.191",
     "tailwindcss": "^3.2.7"
   }
 }
