--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "detect-browser": "^5.3.0",
     "graphql-request": "^5.2.0",
+    "hex-to-rgba": "^2.0.1",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
