--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,16 @@
     "test": "NODE_ENV=test node --experimental-vm-modules ./node_modules/.bin/jest",
     "prismaCreate": "dotenv -e .env.test -- npx prisma migrate dev --create-only",
     "prismaMigrate": "dotenv -e .env.test -- npx prisma migrate dev && npm run copyPrismaClient",
-    "prismaCreateProd":  "dotenv -e .env.prod -- npx prisma migrate dev --create-only",
+    "prismaCreateProd": "dotenv -e .env.prod -- npx prisma migrate dev --create-only",
     "prismaMigrateProd": "dotenv -e .env.prod -- npx prisma migrate dev && npm run copyPrismaClient",
     "copyPrismaClient": "cp ./prisma/schema.prisma ../aws-cdk/lambda/schema.prisma && (cd ../aws-cdk/lambda && prisma generate)",
     "deploy": "npm run prismaMigrateProd && source .env.prod && docker build -t $IMAGE_NAME:latest . && docker tag $IMAGE_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_NAME:latest && aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com && docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_NAME:latest && docker images | grep $IMAGE_NAME | awk '{print $1\":\"$2}' | xargs docker rmi && aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --force-new-deployment --task-definition $TASK_DEFINITION_ARN | cat",
     "prismaStudio": "dotenv -e .env.test -- npx prisma studio",
-    "prismaStudioProd": "dotenv -e .env.prod -- npx prisma studio"
+    "prismaStudioProd": "dotenv -e .env.prod -- npx prisma studio",
+    "buildImage": "source .env.prod && docker rmi -f $IMAGE_NAME:latest && docker build -t $IMAGE_NAME:latest . && docker tag $IMAGE_NAME:latest ln342000/$IMAGE_NAME:latest",
+    "pushImage": "source .env.prod && docker push ln342000/$IMAGE_NAME:latest",
+    "pruneImages": "docker image prune -a -f",
+    "buildAndPushImage": "npm run buildImage && npm run pushImage && npm run pruneImages"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +33,9 @@
     "@aws-sdk/util-dynamodb": "^3.281.0",
     "@prisma/client": "^4.11.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "jest": "^29.4.3",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
