--- a/backend2/package.json
+++ b/backend2/package.json
@@ -10,7 +10,7 @@
     "buildImage": "source .env.production && docker rmi -f $IMAGE_NAME:latest && docker build -t $IMAGE_NAME:latest . && docker tag $IMAGE_NAME:latest ln342000/$IMAGE_NAME:latest",
     "pushImage": "source .env.production && docker push ln342000/$IMAGE_NAME:latest",
     "pruneImages": "docker image prune -a -f",
-    "updateImage": "npm run buildImage && npm run pushImage && npm run pruneImages"
+    "buildAndPushImage": "npm run buildImage && npm run pushImage && npm run pruneImages"
   },
   "keywords": [],
   "author": "",
