--- a/infra/package.json
+++ b/infra/package.json
@@ -8,6 +8,7 @@
         "@pulumi/aws": "^5.0.0",
         "@pulumi/awsx": "^1.0.0",
         "@pulumi/pulumi": "^3.0.0",
+        "@pulumi/synced-folder": "^0.10.2",
         "@typescript-eslint/eslint-plugin": "^5.55.0",
         "@typescript-eslint/parser": "^5.55.0",
         "dotenv": "^16.0.3",
