--- a/infra/startup-scripts/docker-compose.yml
+++ b/infra/startup-scripts/docker-compose.yml
@@ -49,12 +49,14 @@ services:
         parallelism: 1
         delay: 10s
   lb:
-    image: nginx:latest
+    image: ln342000/nginx:latest
     ports:
       - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - "443:443"
     depends_on:
-      - development-api
-      - staging-api
-      - production-api
+      - development_api
+      - staging_api
+      - production_api
+      - development_db
+      - staging_db
+      - production_db
