--- a/infra/startup-scripts/nginx.conf
+++ b/infra/startup-scripts/nginx.conf
@@ -1,15 +1,15 @@
 events {}
 http {
 	server {
-		listen 80;
-		location / {
-			proxy_pass http://production_api:80;
-		}
+    listen 80;
+    return 301 https://$host$request_uri;
 	}
 
 	server {
-		listen 80;
+		listen 443 ssl;
 		server_name api.lincolnnguyen.me;
+		ssl_certificate /home/letsencrypt/live/lincolnnguyen.me/fullchain.pem;
+    ssl_certificate_key /home/letsencrypt/live/lincolnnguyen.me/privkey.pem;
 		location / {
 			proxy_pass http://production_api:80;
 		}
@@ -18,6 +18,8 @@ http {
 	server {
 		listen 80;
 		server_name staging.api.lincolnnguyen.me;
+		ssl_certificate /home/letsencrypt/live/lincolnnguyen.me/fullchain.pem;
+    ssl_certificate_key /home/letsencrypt/live/lincolnnguyen.me/privkey.pem;
 		location / {
 			proxy_pass http://staging_api:4000;
 		}
@@ -26,6 +28,8 @@ http {
 	server {
 		listen 80;
 		server_name development.api.lincolnnguyen.me;
+		ssl_certificate /home/letsencrypt/live/lincolnnguyen.me/fullchain.pem;
+    ssl_certificate_key /home/letsencrypt/live/lincolnnguyen.me/privkey.pem;
 		location / {
 			proxy_pass http://development_api:4000;
 		}
@@ -34,6 +38,8 @@ http {
 	server {
 		listen 5432;
 		server_name database.lincolnnguyen.me;
+		ssl_certificate /home/letsencrypt/live/lincolnnguyen.me/fullchain.pem;
+    ssl_certificate_key /home/letsencrypt/live/lincolnnguyen.me/privkey.pem;
 		location / {
 			proxy_pass http://production_db:5432;
 		}
@@ -42,6 +48,8 @@ http {
 	server {
 		listen 5432;
 		server_name staging.database.lincolnnguyen.me;
+		ssl_certificate /home/letsencrypt/live/lincolnnguyen.me/fullchain.pem;
+    ssl_certificate_key /home/letsencrypt/live/lincolnnguyen.me/privkey.pem;
 		location / {
 			proxy_pass http://staging_db:5433;
 		}
@@ -50,6 +58,8 @@ http {
 	server {
 		listen 5432;
 		server_name development.database.lincolnnguyen.me;
+		ssl_certificate /home/letsencrypt/live/lincolnnguyen.me/fullchain.pem;
+    ssl_certificate_key /home/letsencrypt/live/lincolnnguyen.me/privkey.pem;
 		location / {
 			proxy_pass http://development_db:5434;
 		}
