--- a/infra/nginx/common.conf
+++ b/infra/nginx/common.conf
@@ -1,3 +1,11 @@
 listen 443 ssl;
 ssl_certificate /etc/letsencrypt/live/lincolnnguyen.me/fullchain.pem;
 ssl_certificate_key /etc/letsencrypt/live/lincolnnguyen.me/privkey.pem;
+
+error_page 502 /error.html;
+error_page 404 /error.html;
+
+location = /error.html {
+  root /var/www/html/;
+  internal;
+}
